@startuml

title __PRODUCT_VIEW's Class Diagram__\n

  namespace com.pis.buy2gether {
    namespace usecases.home {
      namespace home {
        namespace product_view {
          class com.pis.buy2gether.usecases.home.home.product_view.GrupActivity {
              - back : ImageButton
              - description : TextView
              - image : ShapeableImageView
              - precio : TextView
              - product_id : String
              - unirse : Button
              - valoracion : RecyclerView
              # onCreate()
              - addListeners()
              - binding()
              - observeView()
          }
        }
      }
    }
  }
  

  namespace com.pis.buy2gether {
    namespace usecases.home {
      namespace home {
        namespace product_view {
          class com.pis.buy2gether.usecases.home.home.product_view.GrupViewModel {
              - grup : MutableLiveData<Grup>
              + GrupViewModel()
              + btn_action()
              + btn_text()
              + getDescription()
              + getName()
              + getPhoto()
              + getPrecio()
              - getGrup()
          }
        }
      }
    }
  }
  

  namespace com.pis.buy2gether {
    namespace usecases.home {
      namespace home {
        namespace product_view {
          class com.pis.buy2gether.usecases.home.home.product_view.ValoracionsAdapter {
              - mData : ArrayList<String>
              + ValoracionsAdapter()
              + add()
              + getItemCount()
              + onBindViewHolder()
              + onCreateViewHolder()
          }
        }
      }
    }
  }
  

  namespace com.pis.buy2gether {
    namespace usecases.home {
      namespace home {
        namespace product_view {
          class com.pis.buy2gether.usecases.home.home.product_view.ValoracionsAdapter.ViewHolder {
              ~ product : TextView
              + ViewHolder()
              + asignarNombre()
          }
        }
      }
    }
  }
  

  com.pis.buy2gether.usecases.home.home.product_view.GrupActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.pis.buy2gether.usecases.home.home.product_view.GrupActivity o-- com.pis.buy2gether.usecases.home.home.product_view.GrupViewModel : viewModel
  com.pis.buy2gether.usecases.home.home.product_view.ValoracionsAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.pis.buy2gether.usecases.home.home.product_view.ValoracionsAdapter +-down- com.pis.buy2gether.usecases.home.home.product_view.ValoracionsAdapter.ViewHolder
  com.pis.buy2gether.usecases.home.home.product_view.ValoracionsAdapter.ViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
